# django_coursework

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
mailing_service/mailing/: adapters.py  admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing_service/mailing/fixtures/: groups.json
mailing_service/mailing/management/commands/: create_moderator_group.py  send_mailing.py
mailing_service/mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_mailing_name_and_more.py  0002_alter_message_subject.py  0003_alter_client_options_alter_message_options_and_more.py
mailing_service/mailing/templates/: base.html
mailing_service/mailing/templates/account/: email_confirm.html  login.html  password_reset.html  signup.html
mailing_service/mailing/templates/account/email/: email_confirmation_message.html
mailing_service/mailing/templates/email/: email_confirmation_message.txt
mailing_service/mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  email_confirmation.html  index.html  mailing_confirm_delete.html  mailing_form.html  mailing_list.html  mailing_statistics.html  message_confirm_delete.html  message_form.html  message_list.html  statistics.html
mailing_service/mailing/templates/registration/: login.html  signup.html
mailing_service/mailing/templates/users/: login.html  register.html
mailing_service/mailing_service/: asgi.py  settings.py  urls.py  wsgi.py
mailing_service/users/: forms.py  views.py
