[project]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = [
    {name = "«tashka-zu»",email = "«zubkovanatska21@gmail.com»"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "django-allauth (>=65.13.1,<66.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
